--- a/level 03/classwork/classwork.html
+++ b/level 03/classwork/classwork.html
@@ -1,3 +1,5 @@
-<p>Nika</p>
-<p>Asabashvili</p>
-<p>Plexanovi</p>
+<p>Goal Oriented Academy</p>
+<button>Welcome</button>
+<img src="image.png">
+<img src="image1.png">
+<p>The best programming academy</p>
